# stream-uart

./: LICENSE.txt  README.md  pyproject.toml
src/amaranth_stream_uart/: __init__.py  rx.py  tx.py
tests/: test_loop.py  test_tx.py
