[project]
name = "amaranth-stream-uart"
version = "0.0.0"
description = "A stream based UART module for Amaranth HDL"

requires-python = "~=3.8"
dependencies = [
    "amaranth[builtin-yosys]~=0.5",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards",
    "yowasp-yosys",
    "yowasp-nextpnr-ice40",
    "yowasp-nextpnr-ecp5",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest"
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test = { cmd = "pytest" }
build_ice40 = { call = "amaranth_stream_uart:build_ice40()" }
build_ecp5  = { call = "amaranth_stream_uart:build_ecp5()"  }
build_gowin = { call = "amaranth_stream_uart:build_gowin()" }
